--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         <button class="popup__close-btn"></button>
         <form class="popup__container">
           <h2 class="popup__container-title">Редактировать профиль</h2>
-          <input class="popup__container-input" type="text" value="Вася Пупкин">
-          <input class="popup__container-input" type="text" value="Пупкинист пупляндии">
+          <input class="popup__container-input popup__container-input_type_title" type="text" maxlength="30">
+          <input class="popup__container-input popup__container-input_type_subtitle" type="text" maxlength="50">
           <button class="popup__container-save-btn">Сохранить</button>
         </form>
       </div>
       <div class="profile__info">
         <img src="./images/avatar.jpeg" class="profile__avatar" alt="Аватар">
         <div class="profile__description">
-          <h2 class="profile__title">Вася Пупкин</h2>
+          <h2 class="profile__name">Вася Пупкин</h2>
           <button class="profile__edit-btn"></button>
-          <h3 class="profile__subtitle">Пупкинист пупляндии</h3>
+          <h3 class="profile__job">Пупкинист</h3>
         </div>
       </div>
       <button class="profile__add-btn"></button>
@@ -45,7 +45,7 @@
       <div class="place">
         <img class="place__image" src="./images/train.jpeg" alt="Поезд">
         <div class="place__description">
-          <p class="place__title">Поезд</p>
+          <p class="place__title">Вокзал</p>
           <button class="place__like-btn"></button>
         </div>
       </div>
@@ -80,6 +80,6 @@
     </section>
     <footer class="footer">© 2020 Mesto Russia</footer>
   </div>
-  <script src="./bloks/popup/popup.js"></script>
+  <script src="./blocks/popup/popup.js"></script>
 </body>
 </html>
