--- a/index.html
+++ b/index.html
@@ -25,61 +25,62 @@
         </form>
       </div>
       <div class="profile__info">
-        <img src="./images/avatar.jpeg" class="profile__avatar" alt="Аватар">
+        <img src="./images/avatar.svg" class="profile__avatar" alt="Аватар">
         <div class="profile__description">
-          <h2 class="profile__name">Вася Пупкин</h2>
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__edit-btn"></button>
-          <h3 class="profile__job">Пупкинист</h3>
+          <p class="profile__job">Исследователь океана</p>
         </div>
       </div>
       <button class="profile__add-btn"></button>
     </section>
-    <section class="places">
-      <div class="place">
+    <ul class="places">
+      <li class="place">
         <img class="place__image" src="./images/eda.jpeg" alt="Город">
         <div class="place__description">
           <p class="place__title">Город</p>
           <button class="place__like-btn"></button>
         </div>
-      </div>
-      <div class="place">
+      </li>
+      <li class="place">
         <img class="place__image" src="./images/train.jpeg" alt="Поезд">
         <div class="place__description">
           <p class="place__title">Вокзал</p>
           <button class="place__like-btn"></button>
         </div>
-      </div>
-      <div class="place">
+      </li>
+      <li class="place">
         <img class="place__image" src="./images/kazan.jpeg" alt="Казанский собор">
         <div class="place__description">
           <p class="place__title">Казанский собор</p>
           <button class="place__like-btn"></button>
         </div>
-      </div>
-      <div class="place">
+      </li>
+      <li class="place">
         <img class="place__image" src="./images/sky.jpeg" alt="Небо">
         <div class="place__description">
           <p class="place__title">Небо</p>
           <button class="place__like-btn"></button>
         </div>
-      </div>
-      <div class="place">
+      </li>
+      <li class="place">
         <img class="place__image" src="./images/swim.jpeg" alt="Прорубь">
         <div class="place__description">
           <p class="place__title">Прорубь</p>
           <button class="place__like-btn"></button>
         </div>
-      </div>
-      <div class="place">
+      </li>
+      <li class="place">
         <img class="place__image" src="./images/volga.jpeg" alt="Волга">
         <div class="place__description">
           <p class="place__title">Волга</p>
           <button class="place__like-btn"></button>
         </div>
-      </div>
-    </section>
+      </li>
+    </ul>
     <footer class="footer">© 2020 Mesto Russia</footer>
   </div>
   <script src="./blocks/popup/popup.js"></script>
+  <script src="./blocks/places/places.js"></script>
 </body>
 </html>
