--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="popup">
         <button class="popup__close-btn"></button>
         <form class="popup__container">
-          <h2 class="popup__container-title">Редактировать профиль</h2>
+          <p class="popup__container-title">Редактировать профиль</p>
           <input class="popup__container-input popup__container-input_type_title" type="text" maxlength="30">
           <input class="popup__container-input popup__container-input_type_subtitle" type="text" maxlength="50">
           <button class="popup__container-save-btn">Сохранить</button>
