--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <button class="popup__container-save-btn">Сохранить</button>
         </form>
       </div>
-      <div class="popup popup_add qqq">
+      <div class="popup popup_add">
         <button class="popup__close-btn"></button>
         <form class="popup__container" novalidate>
           <p class="popup__container-title">Новое место</p>
@@ -76,12 +76,6 @@
         </div>
       </li>
   </template>
-  <script src="./scripts/places-arr.js"></script>
-  <script src="./scripts/popup-add.js"></script>
-  <script src="./scripts/popup-edit.js"></script>
-  <script src="./scripts/popup-img.js"></script>
-  <script src="./scripts/index.js"></script>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/places.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
