--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,11 @@
         <form class="popup__container" novalidate>
           <p class="popup__container-title">Редактировать профиль</p>
           <div class="popup__control">
-            <input class="popup__container-input popup__container-input_type_title" required type="text" minlength="2" maxlength="20">
+            <input class="popup__container-input popup__container-input_type_title" name="title" required type="text" minlength="2" maxlength="20">
             <span class="popup__error"></span>
           </div>
           <div class="popup__control">
-            <input class="popup__container-input popup__container-input_type_subtitle" required type="text" minlength="2" maxlength="40">
+            <input class="popup__container-input popup__container-input_type_subtitle" name="subtitle" required type="text" minlength="2" maxlength="40">
             <span class="popup__error"></span>
           </div>
           <button class="popup__container-save-btn">Сохранить</button>
@@ -34,11 +34,11 @@
         <form class="popup__container" novalidate>
           <p class="popup__container-title">Новое место</p>
           <div class="popup__control">
-            <input class="popup__container-input popup__container-input_type_title" placeholder="Название" required type="text" minlength="1" maxlength="30">
+            <input class="popup__container-input popup__container-input_type_title" name="title" placeholder="Название" required type="text" minlength="1" maxlength="30">
             <span class="popup__error"></span>
           </div>
           <div class="popup__control">
-            <input class="popup__container-input popup__container-input_type_subtitle" placeholder="Ссылка на картинку" required type="url">
+            <input class="popup__container-input popup__container-input_type_subtitle" name="subtitle" placeholder="Ссылка на картинку" required type="url">
             <span class="popup__error"></span>
           </div>
           <button class="popup__container-save-btn">Создать</button>
