feature/ work with api

--- a/src/index.html
+++ b/src/index.html
@@ -44,12 +44,26 @@
           <button class="popup__container-save-btn">Создать</button>
         </form>
       </div>
+      <div class="popup popup_avatar">
+        <button class="popup__close-btn"></button>
+        <form class="popup__container popup__container_avatar" novalidate>
+          <p class="popup__container-title">Обновить аватар</p>
+          <div class="popup__control">
+            <input class="popup__container-input popup__container-input_type_subtitle" name="subtitle" placeholder="Ссылка на картинку" required type="url">
+            <span class="popup__error"></span>
+          </div>
+          <button class="popup__container-save-btn">Сохранить</button>
+        </form>
+      </div>
       <div class="profile__info">
-        <img src="./images/avatar.svg" class="profile__avatar" alt="Аватар">
+        <div class="profile__avatar">
+          <button class="profile__avatar-edit"></button>
+          <img class="profile__avatar-img" alt="Аватар">
+        </div>
         <div class="profile__description">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <h1 class="profile__name"></h1>
           <button class="profile__edit-btn"></button>
-          <p class="profile__job">Исследователь океана</p>
+          <p class="profile__job"></p>
         </div>
       </div>
       <button class="profile__add-btn"></button>
@@ -62,6 +76,13 @@
           <p class="img-popup__title"></p>
         </div>
       </div>
+      <div class="popup popup_submit">
+        <button class="popup__close-btn"></button>
+        <form class="popup__container popup__container_submit" novalidate>
+          <p class="popup__container-title popup__container-title_submit">Вы уверены?</p>
+          <button class="popup__container-save-btn">Да</button>
+        </form>
+      </div>
     </ul>
     <footer class="footer">© 2020 Mesto Russia</footer>
   </div>
@@ -71,7 +92,10 @@
         <button class="place__delete-btn"></button>
         <div class="place__description">
           <p class="place__title"></p>
-          <button class="place__like-btn"></button>
+          <div class="place__like">
+            <button class="place__like-btn"></button>
+            <h3 class="place__like-count"></h3>
+          </div>
         </div>
       </li>
   </template>
